# Star-Office-UI

./: CLAUDE.md  README.md  SKILL.md  agent-invite-template.txt  join-keys.json  office-agent-push.py  pyproject.toml  set_state.py
backend/: app.py  run.sh
docs/: FEATURES_NEW_2026-03-01.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  PROJECT_SUMMARY_2026-03-01.md  STAR_OFFICE_UI_OVERVIEW.md
frontend/: index.html  invite.html  join-office-skill.md  join.html
